fixed table layout issues

--- a/css/trekdb.css
+++ b/css/trekdb.css
@@ -1,6 +1,3 @@
-.scrollable {
-    overflow: auto;
-}
 .relative {
     position: relative;
 }
@@ -14,9 +11,30 @@
     table-layout: fixed;
 }
 
-#trek-container th {
-    width: 100px;
+
+#trek-container div.trek-row-formrow {
+    min-height: 39px;
 }
+
+#trek-container div.trek-column {
+    height: 0;
+    width: 5rem;
+}
+#trek-container div.trek-column.trek-column-string {
+    height: 0;
+    width: 15rem;
+}
+#trek-container div.trek-column.trek-column-timestamp {
+    height: 0;
+    width: 10rem;
+}
+#trek-container div.trek-column.trek-column-control {
+    height: 0;
+    width: 14rem;
+}
+
+    
+
 
 #trek-container tbody {
     min-height: 1px;
